--- a/styles/configs/typography.scss
+++ b/styles/configs/typography.scss
@@ -148,7 +148,7 @@ textarea, .textarea {
 	
 }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
 
 	h1, .heading--h1 {
 		font-size: 26px;
